Fix RTL layout issues on /firefox (Fixes #8231) (#8232)

--- a/media/css/exp/firefox/index.scss
+++ b/media/css/exp/firefox/index.scss
@@ -132,10 +132,10 @@ $image-path: '/media/protocol/img';
 
 @media #{$mq-md} {
     .c-lead {
+        @include bidi (((background-position, center left 50vw, center right 50vw),));
         background-image: url('/media/img/firefox/home/master/hero.jpg');
         background-size: auto 300px;
         background-repeat: no-repeat;
-        background-position: center left 50vw;
     }
 
     .c-lead-title {
@@ -193,6 +193,7 @@ $image-path: '/media/protocol/img';
 
         .t-small & {
             display: inline-block;
+            flex-basis: auto;
             height: 40px;
             width: 40px;
             overflow: hidden;
@@ -263,6 +264,15 @@ $image-path: '/media/protocol/img';
             @media #{$mq-high-res} {
                 background-image: url('/media/img/firefox/home/master/respect-high-res.jpg'), linear-gradient(90deg, #5731AB 50%, $color-violet-90);
             }
+
+            [dir="rtl"] & {
+                background-image: url('/media/img/firefox/home/master/respect-rtl.jpg'), linear-gradient(-90deg, #5731AB 50%, $color-violet-90);
+                background-position: right -30px center, top right;
+
+                @media #{$mq-high-res} {
+                    background-image: url('/media/img/firefox/home/master/respect-rtl-high-res.jpg'), linear-gradient(-90deg, #5731AB 50%, $color-violet-90);
+                }
+            }
         }
 
         .mzp-c-card-feature-content {
@@ -304,7 +314,7 @@ $image-path: '/media/protocol/img';
     margin-top: $layout-md;
 
     strong {
-        @include zap('/media/protocol/img/zaps/zap-13.svg');
+        @include zap('/media/protocol/img/zaps/zap-08.svg');
     }
 }
 
