--- a/media/css/firefox/home/quantum.scss
+++ b/media/css/firefox/home/quantum.scss
@@ -57,6 +57,11 @@ main .mzp-l-content {
         min-height: 610px;
         text-align: left;
         box-sizing: border-box;
+
+        [dir="rtl"] & {
+            background-image: url('/media/img/firefox/home/quantum/product.svg'), url('/media/img/firefox/home/quantum/product-bg-rtl.svg');
+            background-position: right calc(50% + 348px) top 72px, top -110px right 48vw;
+        }
     }
 
     .mzp-l-content {
